cmake_minimum_required(VERSION 3.12.2)
project(bayesian_hmm CXX)

set(CMAKE_INSTALL_PREFIX "../../")
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_FLAGS "-Wall -Wextra")
set(CMAKE_CXX_FLAGS_DEBUG "-O0 -g3")
set(CMAKE_CXX_FLAGS_RELEASE "-O3 -DNDEBUG")

if (${USE_PARALLEL_MODE})
    find_package(OpenMP)
    if(OpenMP_CXX_FOUND)
        message("Build bhmm as a parallel mode")
        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
    else()
        message("not found")
    endif()
endif()

add_executable(bhmm main.cpp bayesian_hmm.cpp data_container.cpp)
INSTALL(TARGETS bhmm RUNTIME DESTINATION bin)

if (${BUILD_PYTHON_MODULE})
    message("Build python module")
    set(PYBIND11_CPP_STANDARD -std=c++${CMAKE_CXX_STANDARD})
    add_subdirectory(pybind11)
    pybind11_add_module(py_bhmm SHARED bayesian_hmm.cpp data_container.cpp py_bhmm.cpp)
    INSTALL(TARGETS py_bhmm LIBRARY DESTINATION bin)
endif()